--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ header a img {
   color:cadetblue;
   justify-content: center;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color: brown;
+  color: rgb(161, 161, 194);
 }
 
 
